<resources>
    <string name="app_name">Staylista Admin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet">No Internet</string>
    <string name="image">image</string>
    <string name="available">Available</string>
    <string name="lost">Lost</string>
    <string name="products">Products</string>
    <string name="inventory">Inventory</string>
    <string name="copuns">Copuns</string>
    <string name="search_product_by_name">Search Product by Name</string>
    <string name="add_product">Add Product</string>
    <string name="plus">+</string>
    <string name="product_details">Product Details</string>
    <string name="price">Price :</string>
    <string name="updated">updated at :</string>
    <string name="deleted_successfully">Deleted Successfully</string>
    <string name="somthing_wrong_with_delete">Something went wrong with deletion process please try again</string>
    <string name="sure_of_delete_product">Are you sure of Deleting this item ?</string>
    <string name="deleted_cancelled">Delete Cancelled</string>
    <string name="vendor">vendor :</string>
    <string name="type">Type :</string>
    <string name="size">Size :</string>
    <string name="color">Color :</string>
    <string name="product_name">Product Name :</string>
    <string name="images">Images :</string>
    <string name="white_space" />
    <string name="quantity">Quantity :</string>
    <string name="select_size_first">select size first to get quantity</string>
    <string name="add_products">Add Products</string>
    <string name="poster">Poster :</string>
    <string name="enter_the_poster_url">Poster URL</string>
    <string name="product">Product</string>
    <string name="enter_product_name">Product Name</string>
    <string name="product_type">Product Type :</string>
    <string name="enter_product_type">Product Type</string>
    <string name="enter_vendor_name">Enter Vendor Name</string>
    <string name="description">Description :</string>
    <string name="enter_product_description">Product Description</string>
    <string name="product_tags">Product Tags :</string>
    <string name="enter_product_tags">Product Tags</string>
    <string name="variant">Variant</string>
    <string name="enter_product_price">Product Price</string>
    <string name="enter_Product_Quantity">Product Quantity</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="options">Options</string>
    <string name="enter_product_color">Product Color</string>
    <string name="enter_product_size">Product Size</string>
    <string name="price_must_not_be_empty">price must not be empty</string>
    <string name="quantity_must_not_be_empty">quantity must not be empty</string>
    <string name="size_must_not_be_empty">size must not be empty</string>
    <string name="color_must_not_be_empty">color must not be empty</string>
    <string name="url_must_not_be_empty">url must not be empty</string>
    <string name="product_name_must_not_be_empty">product name must not be empty</string>
    <string name="vendor_must_not_be_empty">vendor must not be empty</string>
    <string name="product_type_must_not_be_empty">product type must not be empty</string>
    <string name="description_must_not_be_empty">description must not be empty</string>
    <string name="tags_must_not_be_empty">product tags must not be empty</string>
    <string name="poster_must_not_be_empty">product poster must not be empty</string>
    <string name="success">Success</string>
    <string name="failed_update_data">failed update Data</string>
    <string name="this_button_is_not_clickable">This Button is not Clickable</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="shop_name_wrong">Shop name is wrong</string>
    <string name="wrong_password">wrong passowrd</string>
    <string name="empty_password">Password shouldnot be empty</string>
    <string name="empty_shop_name">ShopName shouldnot be empty</string>
    <string name="price_rules">Price Rules</string>
    <string name="discounts">Discounts</string>
    <string name="discount_details">Discount Details</string>
    <string name="code">Code:</string>
    <string name="date">Date:</string>
    <string name="value">Value :</string>
    <string name="limits">Limits :</string>
    <string name="delete_price_rule">Are yo sure you want to delete this price rule ??</string>
    <string name="delete_discount">Are you sure you wan to delete this discount code?</string>
    <string name="create_discount">Create Discount</string>
    <string name="discount_code">Discount Code :</string>
    <string name="enter_discount_code">Enter Discount Code</string>
    <string name="cancel">cancel</string>
    <string name="create">Create</string>
    <string name="discount_code_empty">Discount Code must not be empty</string>
    <string name="title">Title :</string>
    <string name="enter_price_rule_title">Enter Price Rule Title</string>
    <string name="value_type">Value Type:</string>
    <string name="enter_price_rule_value">Enter Price Rule Value</string>
    <string name="enter_start_date">Enter Start Date</string>
    <string name="starts_date">Starts Date :</string>
    <string name="enter_end_date">Enter end Date</string>
    <string name="end_date">End Date :</string>
    <string name="add">Add</string>
    <string-array name="typeArray">
        <item>SHOES</item>
        <item>ACCESSORIES</item>
        <item>T-SHIRT</item>
    </string-array>
    <string-array name="priceRuleType">
        <item>fixed_amount</item>
        <item>percentage</item>
    </string-array>
    <string-array name="color">
        <item>BLACK</item>
        <item>PINK</item>
        <item>WHITE</item>
        <item>BROWN</item>
        <item>PURPLE</item>
        <item>RED</item>
        <item>BLUE</item>
        <item>GREEN</item>
        <item>YELLOW</item>
        <item>GREY</item>
        <item>LIGHT_BROWN</item>
        <item>BURGUNDY</item>
    </string-array>
    <string-array name="categoryType">
        <item>kid</item>
        <item>men</item>
        <item>women</item>
        <item>sale</item>
    </string-array>
    <string-array name="vendorType">
        <item>NIKE</item>
        <item>ADIDAS</item>
        <item>PUMA</item>
        <item>SUPRA</item>
        <item>VANS</item>
        <item>TIMBERLAND</item>
        <item>PALLADUIM</item>
        <item>FLEX FIT</item>
        <item>HERSCHEL</item>
        <item>CONVERSE</item>
        <item>DR MARTENS</item>
        <item>ASICS TIGER</item>
    </string-array>
    <string name="title_must_not_be_empty">title must not be empty</string>
    <string name="value_must_not_be_empty">value must not be empty</string>
    <string name="value_type_must_not_be_empty">value type must not be empty</string>
    <string name="start_date_must_not_be_empty">start date must not be empty</string>
    <string name="end_date_must_not_be_empty">end date must not be empty</string>
    <string name="limit_name_must_not_be_empty">limit name must not be empty</string>
    <string name="limit">Limit :</string>
    <string name="quantity_same">Quantity is The Same Nothing Changed</string>
    <string name="category">Category</string>
    <string name="starts_at">From</string>
    <string name="ends_at">To</string>
    <string name="stylista">Stylista</string>
</resources>