<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_180sdp"
    android:layout_marginHorizontal="@dimen/_2sdp"
    android:layout_marginVertical="@dimen/_8sdp"
    app:cardElevation="@dimen/_16sdp"
    app:cardCornerRadius="@dimen/_16sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_view_product"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_margin="@dimen/_8sdp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image"
            android:scaleType="fitXY"
            android:src="@drawable/splash"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearance="@style/Circle" />

        <TextView
            android:id="@+id/text_view_product_name"
            style="@style/MyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:maxEms="15"
            android:text="@string/products"
            android:fontFamily="@font/andika"
            android:textColor="@color/blue"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/image_view_product"
            app:layout_constraintTop_toTopOf="@id/image_view_product" />

        <TextView
            android:id="@+id/text_view_product_department"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/products"
            android:textColor="@color/black"
            android:fontFamily="@font/andika"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintStart_toEndOf="@id/image_view_product"
            app:layout_constraintTop_toBottomOf="@id/text_view_product_name" />

        <TextView
            android:id="@+id/text_view_date"
            style="@style/MyTextView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/updated"
            android:fontFamily="@font/andika"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintStart_toEndOf="@id/image_view_product"
            app:layout_constraintTop_toBottomOf="@id/text_view_product_department" />

        <TextView
            android:id="@+id/text_view_price"
            style="@style/MyTextView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/price"
            android:textSize="@dimen/_10ssp"
            android:fontFamily="@font/andika"
            app:layout_constraintStart_toEndOf="@id/image_view_product"
            app:layout_constraintTop_toBottomOf="@id/text_view_date" />

        <TextView
            android:id="@+id/text_view_quantity"
            style="@style/MyTextView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/quantity"
            android:textSize="@dimen/_10ssp"
            android:fontFamily="@font/andika"
            app:layout_constraintStart_toEndOf="@id/image_view_product"
            app:layout_constraintTop_toBottomOf="@id/text_view_price" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_details"
            style="@style/ItemButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginVertical="@dimen/_8sdp"
            android:background="@drawable/button_background_gradient"
            android:text="@string/product_details"
            android:fontFamily="@font/andika"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/image_view_delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.8" />

        <ImageView
            android:id="@+id/image_view_delete"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:contentDescription="@string/image"
            android:src="@drawable/delete1"
            app:layout_constraintBottom_toBottomOf="@id/btn_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_details"
            app:layout_constraintTop_toTopOf="@id/btn_details" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>